--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -6,7 +6,9 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
-        "laravel/framework": "5.1.*"
+        "laravel/framework": "5.1.*",
+        "davibennun/laravel-push-notification": "dev-laravel5",
+        "php-ffmpeg/php-ffmpeg": "~0.5"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
