--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.5.9",
+        "ext-fileinfo": "*",
         "laravel/framework": "5.1.*",
         "davibennun/laravel-push-notification": "dev-laravel5",
         "php-ffmpeg/php-ffmpeg": "dev-concat"
